--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,17 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
+    "type": "commonjs",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon server.js"
+        "build": "echo \"Build completed\"",
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "type": "commonjs",
     "dependencies": {
         "axios": "^1.13.2",
         "cors": "^2.8.5",
@@ -20,5 +22,8 @@
     },
     "devDependencies": {
         "nodemon": "^3.1.11"
+    },
+    "engines": {
+        "node": "18.x"
     }
 }
