--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "type": "commonjs",
     "scripts": {
         "build": "echo \"Build completed\"",
-        "start": "node server.js",
+        "start": "npm i&&node server.js",
         "dev": "nodemon server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
